--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "npm run lint",
     "lint": "eslint --ext js --ext jsx src",
     "test:watch": "npm run lint -- --watch",
-    "start": "webpack serve --hot --mode development --devtool eval-source-map --open npm run tailwind",
+    "start": "npm run tailwind & webpack serve --hot --mode development --devtool eval-source-map --open",
     "start:watch": "npm run start",
     "build": "webpack --devtool source-map",
     "tailwind": "tailwindcss -i ./src/App.css -o ./src/output.css --watch"
@@ -30,6 +30,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.10.2",
+    "@mui/material": "^5.10.2",
     "@supabase/supabase-js": "^1.35.4",
     "classnames": "^2.3.1",
     "react": "^18.2.0",
