--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
         "@mui/material": "^5.10.2",
         "@mui/styled-engine-sc": "^5.10.1",
         "@mui/system": "^5.10.2",
+        "@mui/x-date-pickers": "^5.0.0-beta.7",
         "@supabase/supabase-js": "^1.35.4",
         "classnames": "^2.3.1",
+        "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.3.0",
