--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@mui/system": "^5.10.2",
         "@mui/x-date-pickers": "^5.0.0-beta.7",
         "@supabase/supabase-js": "^1.35.4",
+        "chart.js": "^3.9.1",
         "classnames": "^2.3.1",
         "moment": "^2.29.4",
         "react": "^18.2.0",
