--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "classnames": "^2.3.1",
         "moment": "^2.29.4",
         "react": "^18.2.0",
+        "react-chartjs-2": "^4.3.1",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.3.0",
         "react-intersection-observer": "^9.4.0",
