reactour basic functionality working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "amet",
         "elit",
         "Journaling",
+        "reactour",
         "Sapiente",
         "signin",
         "signout"
