--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@mui/styled-engine-sc": "^5.10.1",
         "@mui/system": "^5.10.2",
         "@mui/x-date-pickers": "^5.0.0-beta.7",
+        "@reactour/tour": "^3.1.1",
         "@supabase/supabase-js": "^1.35.4",
         "chart.js": "^3.9.1",
         "classnames": "^2.3.1",
